Photo attribution block: Fix spacing of "copy" button

--- a/source/wp-content/themes/wporg-photos-2024/src/photo-attribution/style.scss
+++ b/source/wp-content/themes/wporg-photos-2024/src/photo-attribution/style.scss
@@ -47,4 +47,8 @@
 	border-width: 0 1px 1px;
 	border-style: solid;
 	border-color: var(--wp--preset--color--light-grey-1);
+
+	button {
+		width: auto;
+	}
 }
